llvm/test/tools/llubi/lib_poison_argument.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare i32 @puts(ptr)

define i32 @main() {
  %1 = call i32 @puts(ptr poison)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: Poison argument passed to a library call.
; CHECK-NEXT: error: Execution of function 'main' failed.
